--- a/first_follow.ipynb
+++ b/first_follow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['g', 'h', 'b']"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado = ['g', 'λ', 'h', 'b']\n",
+    "resultado.remove('λ')\n",
+    "resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +106,7 @@
        "5"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,16 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['a', 'h', 'g', 'd', 'b']"
+       "['h', 'd', 'g', 'b', 'a']"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,16 +147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['A', 'B', 'C', 'S']"
+       "['A', 'C', 'B', 'S']"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +254,7 @@
        " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +293,7 @@
        " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +313,7 @@
        "{'S': [], 'A': [], 'B': [], 'C': []}"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +333,7 @@
        "{'S': [], 'A': [], 'B': [], 'C': []}"
       ]
      },
-     "execution_count": 309,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,16 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -411,13 +424,13 @@
       "['g', 'λ']\n",
       "['h']\n",
       "['h', 'λ']\n",
-      "['g', 'λ', 'd', 'h']\n",
-      "['h', 'g', 'λ']\n",
-      "['g', 'λ', 'd', 'h']\n",
+      "['g', 'h', 'd', 'λ']\n",
+      "['g', 'h', 'λ']\n",
+      "['g', 'h', 'd', 'λ']\n",
       "['b']\n",
-      "['λ', 'h', 'g', 'd', 'b']\n",
+      "['h', 'λ', 'd', 'b', 'g']\n",
       "['a']\n",
-      "['a', 'λ', 'g', 'h', 'd', 'b']\n"
+      "['h', 'λ', 'd', 'a', 'b', 'g']\n"
      ]
     }
    ],
@@ -429,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +454,7 @@
        " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,30 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['h', 'g', 'λ'], ['b'], ['a']]"
-      ]
-     },
-     "execution_count": 314,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "### Remover chaves de tamanho maior que um\n",
-    "\n",
-    "lista_chaves_desnecessarias = [key for key in first_dict if len(key) > 1 or key in variaveis_terminais]\n",
-    "[first_dict.pop(key) for key in lista_chaves_desnecessarias]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -496,84 +486,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['aABb', 'A']"
-      ]
-     },
-     "execution_count": 316,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "elem = 'A'\n",
-    "value = ['aABb','A']\n",
-    "lista_match = [parcela for parcela in value if elem in parcela]\n",
-    "lista_match"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 317,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def find_elements_in_prod(production):\n",
-    "    for key, value in production.items():        \n",
-    "        for elem in variaveis_nao_terminais:\n",
-    "            lista_match = [parcela for parcela in value if elem in parcela]\n",
-    "            follow_position[elem] = merge_lists(lista_match,follow_position[elem])  \n",
-    "\n",
-    "find_elements_in_prod(production)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S  :  []\n",
-      "A  :  ['ACB']\n",
-      "B  :  ['CbB', 'BC', 'ACB', 'Ba']\n",
-      "C  :  ['CbB', 'BC', 'ACB']\n"
-     ]
-    }
-   ],
-   "source": [
-    "for key, value in follow_position.items():\n",
-    "    print(key, ' : ', value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 319,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S  :  ['a', 'λ', 'g', 'h', 'd', 'b']\n",
-      "A  :  ['g', 'λ', 'd', 'h']\n",
+      "S  :  ['h', 'λ', 'd', 'a', 'b', 'g']\n",
+      "A  :  ['g', 'h', 'd', 'λ']\n",
       "B  :  ['g', 'λ']\n",
-      "C  :  ['h', 'λ']\n"
+      "C  :  ['h', 'λ']\n",
+      "CB  :  ['g', 'h', 'λ']\n",
+      "bB  :  ['b']\n",
+      "a  :  ['a']\n"
      ]
     }
    ],
@@ -584,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +519,7 @@
        "{'S': [], 'A': [], 'B': [], 'C': []}"
       ]
      },
-     "execution_count": 320,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,66 +530,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-321-e6244399fcad>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-321-e6244399fcad>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    for key,\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "def find_elem_in_values(elem, prod):\n",
-    "    for key, "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aABb\n"
+      "S:ACB\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['$']"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def follow_set(key):\n",
-    "    resultado = []\n",
-    "    \n",
-    "    if key == simbolo_inicial:\n",
-    "        resultado = merge_lists(resultado, \"$\") \n",
-    "    \n",
-    "    ### Achar na produção, onde existe a chave\n",
+    "  resultado = []\n",
+    "  ### Achar elemento que contem key\n",
+    "  for chave, valor in production.items():\n",
+    "    for elem in valor:\n",
+    "      if key == simbolo_inicial:\n",
+    "          saida = \"$\"\n",
+    "      if key in elem:\n",
+    "        ### Achou elemento que possui a key\n",
+    "        print(chave + ':' + elem)\n",
+    "        saida = []\n",
     "\n",
-    "    for elem in follow_position[key]:\n",
-    "        print(elem)\n",
+    "        ### Se elemento estiver na posição final    \n",
+    "        indice = elem.index(key)\n",
     "\n",
-    "    return resultado\n",
+    "        palavra_restante = elem[indice + 1:]\n",
     "\n",
+    "        if palavra_restante == '':\n",
+    "          saida = follow_set(simbolo_inicial)\n",
+    "        else:\n",
+    "          saida = first_dict[palavra_restante]\n",
     "\n",
-    "follow_set('A')\n",
+    "        if (len(follow_dict[chave]) != 0):\n",
+    "          saida = follow_dict[chave]\n",
+    "        else:\n",
+    "          saida = follow_set(chave)    \n",
     "\n",
+    "      resultado = merge_lists(resultado,saida)\n",
     "\n",
-    "    \n",
-    "    "
+    "  follow_dict[key] = resultado\n",
+    "  \n",
+    "  return resultado\n",
+    "\n",
+    "follow_set('A')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S:ACB\n",
+      "S:ACB\n",
+      "S:CbB\n",
+      "S:Ba\n",
+      "A:BC\n",
+      "S:ACB\n",
+      "S:CbB\n",
+      "A:BC\n"
+     ]
+    }
+   ],
+   "source": [
+    "for variavel in production:\n",
+    "    variavel_da_vez = variavel\n",
+    "    follow_set(variavel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S  :  ['$']\n",
+      "A  :  ['$']\n",
+      "B  :  ['$']\n",
+      "C  :  ['$']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in follow_dict.items():\n",
+    "    print(key, ' : ', value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Remover chaves de tamanho maior que um\n",
+    "\n",
+    "lista_chaves_desnecessarias = [key for key in first_dict if len(key) > 1 or key in variaveis_terminais]\n",
+    "[first_dict.pop(key) for key in lista_chaves_desnecessarias]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chave = 'S'\n",
+    "elem = 'ACB'\n",
+    "key = 'B'\n",
+    "\n",
+    "indice = elem.index(key)\n",
+    "print(indice)\n",
+    "elem[indice + 1:]"
    ]
   },
   {
